/*
 * $Id: ChangeLog,v 1.450 2002/10/17 14:57:09 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-17 22:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
   ! Fixed hb_compExprUseFunCall() to put reduced value into memory pointed to by pSelf.
     /* This solved GPF under MSVC, and possible other compilers. */

  * source/compiler/exproptb.c
  * source/macro/macrob.c
    * Touched to force recompilation of hbexprb.c (if not doing a CLEAN build).

  * source/compiler/harbour.sly
    + Added missing type casts.

  * source/vm/classes.c
    + Added missing type cast.

2002-10-17 07:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    ! Fixed GPF when pParms is NULL in hb_compExprUseFunCall()
    ! Fixed typo.

  * source/vm/hvm.c
    * Fixed missing comma.

2002-10-16 21:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    ! Fixed long standing TODO: Move Function optimizations from hb_compExprNewFunCall() to hb_compExprUseFunCall()

2002-10-16 17:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexpra.c
    + Added reduction with HB_EA_REDUCE to paramas of functions optimized in hb_compExprNewFunCall().
    ! Fixed compile time optimization of Upper() to support embeded NULL characters in the string.

  * include/hbexprb.c
    + Added compile time optimization of SubStr( "Some Literal", litralNum, literalNum or NIL )

  * source/compiler/harbour.slx
    - Removed few commented lines.

  * source/rtl/minmax.c
    ! Corrected support for Date compared with Non Date in Max() and Min()

  * source/rtl/round.c
    * Reverted recent change to Int()

  * source/vm/macro.c
    ! Corrected call to hb_memvarGetStrValuePtr() to support new optimization of hb_memvarFindSymbol()

  * source/vm/memvars.c
    * Minor correction to trace message.
