@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.450 2002/10/17 14:57:09 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.451 2002/10/18 05:15:53 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-10-18 18:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbstack.h
+    ! fixed definition of hb_stackItemFromBase() to support variable paramaters functions.
+    * Changed default to use HB_STACK_MACROS.
+
+  * source/vm/estack.c
+    + Added #undef for each of the HB_STACK_MACROS so that functions will be included in R/T, incase used by 3rd party.
 
 2002-10-17 22:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbexprb.c
